...
        />
        <OptionRow
          icon={<DepositOptionWallet width={28} height={28} />}
          title={t('OnePlan Wallet')}
          subtitle={t('Receive assets via OnePlan Wallet')}
          onPress={onOnchain}
          testID="deposit-option-oneplan-wallet"
        />
      </View>
    </View>
  );
}

...
